--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <section class="conteudo principal"></section>
     <h2 class="titulo principal">meus objetivos do ano</h2>
+    <div class="botoes" >
+<button class="botao"> obj1</button>
+<button class="botao"> obj2</button>
+<button class="botao"> obj3</button>
+<button class="botao"> obj4</button>
+    </div>
 </body>
 </html>
